--- a/src/app/locales/pt.json
+++ b/src/app/locales/pt.json
@@ -4,7 +4,7 @@
     "description": "Rede social para pessoas não sociais",
     "version": "Versão {version}",
     "locale": {
-      "jp": "Японский",
+      "jp": "日本語",
       "pt": "Português",
       "en": "Inglês",
       "ru": "Russo"
