Переверстал форму входа

--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -386,14 +386,24 @@
   "auth": {
     "login": {
       "title": "Вход",
+      "forgot": "Забыли пароль?",
       "create_account": "У вас ещё нет аккаунта? {0}"
     },
     "forgot": {
-      "title": "Забыли пароль?",
-      "suggest": "Мы отправим код подтверждения на этот адрес эл. почты, если он соответствует существующей учетной записи",
+      "title": "Восстановление пароля",
+      "suggest": "Для восстановления пароля введите эл. почту своей учётной записи. Мы отправим на неё проверочный код",
       "contact_us": "Свяжитесь с нами",
-      "help": "{0}, если Вы не помните свою электронную почту или не имеете доступа к ней",
+      "help": "{0}, если Вы не помните свою эл. почту или не имеете доступа к ней",
       "remember": "Вспомнили пароль?"
+    },
+    "forgot-code": {
+      "title": "Код подтверждения",
+      "suggest": "Проверьте свою эл. почту, чтобы найти код подтверждения",
+      "help": "Если сообщения нет в папке «Входящие», проверьте папку со спамом. Если его нет и там, возможно, этот адрес эл. почты не подтвержден или не соответствует существующей уч. записи."
+    },
+    "forgot-change": {
+      "title": "Изменение пароля",
+      "suggest": "Пароль должен быть не короче 8 символов и не являться вашим днем рождения"
     },
     "create_account": {
       "title": "Создать аккаунт",
@@ -402,22 +412,19 @@
       "terms": "пользовательское соглашение",
       "privacy": "политику конфиденциальности"
     },
-    "reset-password": {
-      "title": "Изменение пароля",
-      "suggest": "Пароль должен быть не короче 6 символов и не являться вашим днем рождения",
-      "contact_us": "Свяжитесь с нами",
-      "help": "{0}, если не приходит код или у вас что-то не получается",
-      "remember": "Вспомнили пароль?"
-    },
     "button": {
       "login": "Войти",
-      "continue": "Продолжить"
+      "continue": "Далее",
+      "back": "Назад",
+      "cancel": "Отмена",
+      "save": "Сохранить"
     },
     "field": {
       "name": "Имя",
       "username": "Логин",
       "email": "E-mail",
-      "password": "Пароль"
+      "password": "Пароль",
+      "code": "6-значный код"
     }
   },
   "badge": {
