Немного фана и будущих нововведений

--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -12,6 +12,11 @@
     "theme": {
       "white": "Светлая тема",
       "black": "Темная тема"
+    },
+    "density": {
+      "compact": "Компактная",
+      "default": "Стандартная",
+      "spacious": "Просторная"
     }
   },
   "header": {
@@ -32,13 +37,14 @@
     },
     "teasers": {
       "item": {
+        "stories": { "title": "Никаких историй", "info": "Меня ваши истории уже порядком надоели, я не могу их уже смотреть. Одна история лучший другой, просто" }, 
         "brain": { "title": "Никаких нейросетей", "info": "Мы отдаем предпочтения контенту созданными руками или ногами человека" }, 
         "recommendations": { "title": "Никаких рекомендаций", "info": "Новостная лента содержит только то, на что ты подписался и без рекомендаций добавить бывшую и ее нового парня в друзья" }, 
         "combine": { "title": "Никаких лишних функций", "info": "Ищешь доставку, гороскоп, прогноз погоды, музыку и маркетплейс? Ошибся вкладкой, приятель" },
         "friends": { "title": "Никаких друзей", "info": "Только подписки на контент пользователя что интересен тебе" },
         "likes": { "title": "Никаких лайков", "info": "Мы же не хотим видеть посты с котятами на постоянке ради набора рейтинга?" },
         "blacklist": { "title": "Никаких черных списков", "info": "Тебе не нравится что пишет другой человек?  Не читай его, это не сложно" },
-        "ads": { "title": "Никаких брендов", "info": "Лично мне хватает их рекламы в интернете и в почтовом ящике" }
+        "ads": { "title": "Никаких брендов", "info": "Мы выступаем против диктатуры мейджеров рекламодателей" }
       }
     },
     "action": {
@@ -244,7 +250,12 @@
       "apply": "Я гарантирую что не пытаюсь украсть чужой аккаунт и меняю пароль по своей собственной воле и никто мне не угрожает"
     },
     "appearance": {
-      "title": "Внешний вид"
+      "title": "Внешний вид",
+      "field": {
+        "locale": "Язык интерфейса",
+        "theme": "Тема интерфейса",
+        "density": "Плотность элементов"
+      }
     },
     "connections": {
       "title": "Связанные аккаунты",
@@ -297,9 +308,7 @@
       "current_password": "Текущий пароль",
       "new_password": "Новый пароль",
       "password": "Пароль",
-      "username": "Логин",
-      "locale": "Язык интерфейса",
-      "theme": "Тема интерфейса"
+      "username": "Логин"
     },
     "sex": {
       "male": "Мужской",
@@ -350,6 +359,7 @@
       "edit-content": "Изменено содержимое"
     },
     "pseudo-form": {
+      "placeholder-froggy": "Сегодня среда, чувачок...",
       "placeholder": "Напишите что-нибудь...",
       "comments-on": "Комментарии включены",
       "comments-off": "Комментарии выключены",
@@ -581,6 +591,8 @@
     "delete": "Удалить",
     "refresh": "Обновить",
     "attach_image": "Прикрепить изображение",
+    "select_emoji": "Выбрать emoji",
+    "select_gif": "Выбрать GIF",
     "copy_link": "Скопировать ссылку",
     "report": "Пожаловаться",
     "remove-bookmark": "Убрать из закладок",
