--- a/src/app/locales/ru.json
+++ b/src/app/locales/ru.json
@@ -37,7 +37,7 @@
     },
     "teasers": {
       "item": {
-        "stories": { "title": "Никаких историй", "info": "Меня ваши истории уже порядком надоели, я не могу их уже смотреть. Одна история лучший другой, просто" }, 
+        "stories": { "title": "Никаких историй", "info": "Меня ваши истории уже порядком надоели, я не могу их уже смотреть. Одна история лучшие другой, просто" }, 
         "brain": { "title": "Никаких нейросетей", "info": "Мы отдаем предпочтения контенту созданными руками или ногами человека" }, 
         "recommendations": { "title": "Никаких рекомендаций", "info": "Новостная лента содержит только то, на что ты подписался и без рекомендаций добавить бывшую и ее нового парня в друзья" }, 
         "combine": { "title": "Никаких лишних функций", "info": "Ищешь доставку, гороскоп, прогноз погоды, музыку и маркетплейс? Ошибся вкладкой, приятель" },
@@ -341,7 +341,8 @@
       "user-agreement": "Пользовательское соглашение",
       "privacy": "Политика конфиденциальности",
       "legal": "Правовая информация",
-      "data-security": "Защита данных"
+      "data-security": "Защита данных",
+      "architecture": "Архитектура приложения"
     },
     "refresh": "Обновить"
   },
@@ -382,7 +383,8 @@
       "author": "Автор",
       "reply": "Ответить",
       "replies": "0 ответов | {n} ответ | {n} ответа | {n} ответов",
-      "edited": "ред"
+      "edited": "ред",
+      "parent": "Родительский комментарий"
     },
     "form": {
       "placeholder": "Ответьте что-нибудь..."
@@ -573,6 +575,8 @@
     }
   },
   "action": {
+    "pin": "Закрепить",
+    "unpin": "Открепить",
     "options": "Еще",
     "subscribe": "Подписаться",
     "unsubscribe": "Отписаться",
@@ -602,6 +606,10 @@
   "modals": {
     "search-filter": {
       "title": "Фильтр поиска"
+    },
+    "entry-pin": {
+      "title": "Закрепить запись",
+      "help": "Пост будет закреплен наверху и станет первым в ленте вашего блога. Если у вас уже есть закрепленный пост, этот пост займет его место"
     },
     "entry-history": {
       "title": "История версий"
